# sunny

./: Cargo.toml  LICENSE-APACHE-2.0.md  LICENSE-MIT.md  README.md  TODO.md
.cargo/: config
.github/workflows/: publish.yml
examples/: curl.rs  curl2.rs  curl3.rs  eg1.rs  ex.rs  generate.rs  multi.rs
src/: cli.rs  logger.rs  main.rs
src/lib/: client.rs  error.rs  mod.rs  models.rs  multi_dl.rs  spider.rs  utils.rs
tests/: utils.rs
