[package]
authors = ["pjmp"]
categories = ["command-line-utilities"]
description = """
Tool to download free music from Bandcamp.
Automatically organize files to folder, ID3 tags (including album art).
"""
documentation = "https://docs.rs/sunny"
edition = "2021"
homepage = "https://docs.rs/crate/sunny"
keywords = ["bandcamp", "bandcamp-downloader", "bandcamp-dl", "sunny"]
license = "MIT OR Apache-2.0"
name = "sunny"
readme = "README.md"
repository = "https://github.com/pjmp/sunny"
version = "0.3.0"

[lib]
path = "src/lib/mod.rs"

[dependencies]
async-std = "1.12.0"
clap = {version = "3.1.16", features = ["derive"]}
console = "0.15.2"
gjson = "0.8.1"
html-escape = "0.2.12"
id3 = "1.5.0"
indicatif = "0.16.2"
rayon = "1.6.0"
scraper = {version = "0.13.0", features = [], default-features = false}
strfmt = "0.2.2"
surf = "2.3.2"
# todo upgrade to latest version
time = "0.2.27"
