[package]
authors = ["pjmp"]
categories = ["command-line-utilities"]
description = """Tool to download free music from Bandcamp.
Automatically organize files to folder, ID3 tags (including album art)."""
documentation = "https://docs.rs/sunny"
edition = "2021"
homepage = "https://docs.rs/crate/sunny"
keywords = ["bandcamp", "bandcamp-downloader", "bandcamp-dl", "sunny"]
license = "MIT OR Apache-2.0"
name = "sunny"
readme = "README.md"
repository = "https://github.com/pjmp/sunny"
version = "1.0.0"

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.66"
chrono = {version = "0.4.23", default-features = false}
clap = {version = "4.0.26", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]}
console = "0.15.2"
curl = "0.4.44"
gjson = "0.8.1"
html-escape = "0.2.12"
id3 = "1.5.0"
indicatif = "0.17.2"
rayon = "1.6.0"
scraper = {version = "0.13.0", default-features = false}
strfmt = "0.2.2"
term-table = "1.3.2"
url = "2.3.1"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
